# fast_api_with_tdd

./: .pre-commit-config.yaml  pyproject.toml
src/core/: config.py
src/store/: main.py
