[tool.poetry]
name = "fast-api-with-tdd"
version = "0.1.0"
description = ""
authors = ["davidsonsalinas <davidson.nando@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
fastapi = "^0.111.0"
mypy = "^1.10.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
motor = "^3.4.0"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
